--- a/WebDev/FrontEnd/cake-app/package.json
+++ b/WebDev/FrontEnd/cake-app/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "video-site",
+  "name": "cake-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "mobx": "^6.0.4",
-    "mobx-react-lite": "^3.1.6",
-    "prop-types": "^15.7.2",
+    "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
-    "react-router": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
