demo time limit stop
I did about as much as I could do with the time limit given.

--- a/WebDev/FrontEnd/crescendo-demo/src/prepros-6.config
+++ b/WebDev/FrontEnd/crescendo-demo/src/prepros-6.config
@@ -28,7 +28,20 @@
       "imports": [
         "styles/styles.scss",
         "styles/variables.scss",
-        "styles/Organisms/o_NavBar.scss"
+        "styles/Atoms/a_socialMediaBtns.scss",
+        "styles/Atoms/a_carouselCards.scss",
+        "styles/Atoms/a_insightCards.scss",
+        "styles/Molecules/m_CallUsContainer.scss",
+        "styles/Molecules/m_SocialMediaLinksContainer.scss",
+        "styles/Molecules/m_TopFoldBG.scss",
+        "styles/Molecules/m_CarouselItem.scss",
+        "styles/Molecules/m_CommitmentBody.scss",
+        "styles/Molecules/m_InsightsMain.scss",
+        "styles/Organisms/o_NavBar.scss",
+        "styles/Organisms/o_Footer.scss",
+        "styles/Organisms/o_CommitmentSection.scss",
+        "styles/Organisms/o_InsightsSection.scss",
+        "styles/Organisms/o_UpcomingSection.scss"
       ]
     },
     {
@@ -36,10 +49,46 @@
       "imports": [
         "styles/variables.scss"
       ]
+    },
+    {
+      "path": "styles/Atoms/a_socialMediaBtns.scss",
+      "imports": [
+        "styles/variables.scss"
+      ]
+    },
+    {
+      "path": "styles/Molecules/m_TopFoldBG.scss",
+      "imports": [
+        "styles/variables.scss"
+      ]
+    },
+    {
+      "path": "styles/Atoms/a_carouselCards.scss",
+      "imports": [
+        "styles/variables.scss"
+      ]
+    },
+    {
+      "path": "styles/Molecules/m_CarouselItem.scss",
+      "imports": [
+        "styles/variables.scss"
+      ]
+    },
+    {
+      "path": "styles/Molecules/m_InsightsMain.scss",
+      "imports": [
+        "styles/variables.scss"
+      ]
+    },
+    {
+      "path": "styles/Atoms/a_InsightCards.scss",
+      "imports": [
+        "styles/variables.scss"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
