--- a/WebDev/FrontEnd/reactpwdemo/package.json
+++ b/WebDev/FrontEnd/reactpwdemo/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@playwright/test": "^1.18.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
@@ -12,7 +13,9 @@
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "react-uuid": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
