--- a/WebDev/FullStack/job-search-app/package.json
+++ b/WebDev/FullStack/job-search-app/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.7",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
